icons ok, align center to try fix text

--- a/src/components/shared/Footer/index.module.scss
+++ b/src/components/shared/Footer/index.module.scss
@@ -38,6 +38,7 @@
             justify-content: space-between;
             padding: 0.5rem;
             font-size: .8rem;
+            text-align: center;
 
             ul {
                 display: flex;
